--- a/episodes/001-lamest-superheroes.njk
+++ b/episodes/001-lamest-superheroes.njk
@@ -10,29 +10,33 @@ hosts:
 bytes: 13373066
 duration: '0:27:51'
 tags: ['episodes', 'superheroes']
-list_brian:
-  - "Pinpoint: Always know his exact location"
-  - "Manhole: He’s a hole"
-  - "Earonaut: Complete control over his ears"
-  - "Pants Eyes: Read anything by sitting on it"
-  - "The Thumper: Determine if anything is fresh by thumping on it"
-  - "Tubero: Sense potatoes"
-  - "Extension: Always gets an extra day for any deadline"
-  - "X-Hale: Blow indefinitely"
-  - "Overgeorge: Mind control people named “George”"
-  - "Payphone: Contact all pay phones mentally"
-list_melissa: 
-  - "Colorgirl: can turn her nose any color"
-  - "Prettyboy: can mind-control his hair"
-  - "Sir No-See: turns invisible, but only when there is no light"
-  - "Sunbeam: uncontrollably shots lasers from eyes after slight sunburn"
-  - "Boing Boing: makes small rubber bouncy balls to attack with"
-  - "Glubglub: can breathe underwater, but only if it's purified drinking water"
-  - "The Dripper: superhearing, but only for leaky faucets"
-  - "Lady Llama: turns into a llama"
-  - "Pupmaster: can summon puppies to his location"
-  - "Grim Leaper: leaps tall buildings with single bound when scowling, needs parachute coming down"
+brian:
+  host: Brian
+  list:
+    - "Pinpoint: Always know his exact location"
+    - "Manhole: He’s a hole"
+    - "Earonaut: Complete control over his ears"
+    - "Pants Eyes: Read anything by sitting on it"
+    - "The Thumper: Determine if anything is fresh by thumping on it"
+    - "Tubero: Sense potatoes"
+    - "Extension: Always gets an extra day for any deadline"
+    - "X-Hale: Blow indefinitely"
+    - "Overgeorge: Mind control people named “George”"
+    - "Payphone: Contact all pay phones mentally"
+melissa:
+  host: Melissa
+  list:
+    - "Colorgirl: can turn her nose any color"
+    - "Prettyboy: can mind-control his hair"
+    - "Sir No-See: turns invisible, but only when there is no light"
+    - "Sunbeam: uncontrollably shots lasers from eyes after slight sunburn"
+    - "Boing Boing: makes small rubber bouncy balls to attack with"
+    - "Glubglub: can breathe underwater, but only if it's purified drinking water"
+    - "The Dripper: superhearing, but only for leaky faucets"
+    - "Lady Llama: turns into a llama"
+    - "Pupmaster: can summon puppies to his location"
+    - "Grim Leaper: leaps tall buildings with single bound when scowling, needs parachute coming down"
 ---
 
-{% list "Melissa", list_melissa %}
-{% list "Brian", list_brian %}
+{% list melissa %}
+{% list brian %}
