--- a/episodes/003-podcasts.njk
+++ b/episodes/003-podcasts.njk
@@ -10,32 +10,36 @@ hosts:
 bytes: 17743238
 duration: '0:36:58'
 tags: ['episodes', 'podcasts']
-list_brian:
-  - {"title": "The Dice Steeple", "url": "http://www.dicesteeple.libsyn.com/"}
-  - {"title": "Not Another Philly Sports Talk Show", "url": "https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=4&cad=rja&uact=8&ved=0ahUKEwi2mrH6zbDNAhUEQSYKHaPxA2MQFgg1MAM&url=https%3A%2F%2Fitunes.apple.com%2Fus%2Fpodcast%2Fnot-another-philly-sports%2Fid498359591%3Fmt%3D2&usg=AFQjCNHH63MQq-6G_vpy_88asSM0isNzjg&sig2=O5EIdTn6GSeVAO1zGFEHzA"}
-  - {"title": "Ludology", "url": "http://www.ludology.libsyn.com/"}
-  - {"title": "Question of the Day", "url": "http://www.earwolf.com/show/question-of-the-day/"}
-  - {"title": "Common Sense", "url": "http://www.dancarlin.com/common-sense-home-landing-page/"}
-  - {"title": "Freakonomics", "url": "http://freakonomics.com/archive/"}
-  - {"title": "The Dice Tower", "url": "http://www.dicetower.com/game-podcast/dice-tower"}
-  - {"title": "Hardcore History", "url": "http://www.dancarlin.com/hardcore-history-series/"}
-  - {"title": "Flip the Table", "url": "https://tableflipsyou.blogspot.com/p/podcast.html"}
-  - {"title": "The Sci-Fi Christian", "url": "http://thescifichristian.com"}
-list_melissa:
-  - {"title": "The Dice Steeple", "url": "http://www.dicesteeple.libsyn.com/"}
-  - {"title": "Reasonable Faith", "url": "http://www.reasonablefaith.org/reasonable-faith-podcast/latest"}
-  - {"title": "Cold-Case Christianity", "url": "http://coldcasechristianity.com/category/podcasts/"}
-  - {"title": "Stuff You Missed in History Class", "url": "http://www.missedinhistory.com/podcasts/"}
-  - {"title": "Hardcore History", "url": "http://www.dancarlin.com/hardcore-history-series/"}
-  - {"title": "Freakonomics", "url": "http://freakonomics.com/archive/"}
-  - {"title": "Unbelievable?", "url": "http://www.premierchristianradio.com/Shows/Saturday/Unbelievable"}
-  - {"title": "Flip the Table", "url": "https://tableflipsyou.blogspot.com/p/podcast.html"}
-  - {"title": "Lore", "url": "http://www.lorepodcast.com/episodes/"}
-  - {"title": "The Sci-Fi Christian", "url": "http://thescifichristian.com"}
+brian:
+  host: Brian
+  list:
+    - {"title": "The Dice Steeple", "url": "http://www.dicesteeple.libsyn.com/"}
+    - {"title": "Not Another Philly Sports Talk Show", "url": "https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=4&cad=rja&uact=8&ved=0ahUKEwi2mrH6zbDNAhUEQSYKHaPxA2MQFgg1MAM&url=https%3A%2F%2Fitunes.apple.com%2Fus%2Fpodcast%2Fnot-another-philly-sports%2Fid498359591%3Fmt%3D2&usg=AFQjCNHH63MQq-6G_vpy_88asSM0isNzjg&sig2=O5EIdTn6GSeVAO1zGFEHzA"}
+    - {"title": "Ludology", "url": "http://www.ludology.libsyn.com/"}
+    - {"title": "Question of the Day", "url": "http://www.earwolf.com/show/question-of-the-day/"}
+    - {"title": "Common Sense", "url": "http://www.dancarlin.com/common-sense-home-landing-page/"}
+    - {"title": "Freakonomics", "url": "http://freakonomics.com/archive/"}
+    - {"title": "The Dice Tower", "url": "http://www.dicetower.com/game-podcast/dice-tower"}
+    - {"title": "Hardcore History", "url": "http://www.dancarlin.com/hardcore-history-series/"}
+    - {"title": "Flip the Table", "url": "https://tableflipsyou.blogspot.com/p/podcast.html"}
+    - {"title": "The Sci-Fi Christian", "url": "http://thescifichristian.com"}
+melissa:
+  host: Melissa
+  list:
+    - {"title": "The Dice Steeple", "url": "http://www.dicesteeple.libsyn.com/"}
+    - {"title": "Reasonable Faith", "url": "http://www.reasonablefaith.org/reasonable-faith-podcast/latest"}
+    - {"title": "Cold-Case Christianity", "url": "http://coldcasechristianity.com/category/podcasts/"}
+    - {"title": "Stuff You Missed in History Class", "url": "http://www.missedinhistory.com/podcasts/"}
+    - {"title": "Hardcore History", "url": "http://www.dancarlin.com/hardcore-history-series/"}
+    - {"title": "Freakonomics", "url": "http://freakonomics.com/archive/"}
+    - {"title": "Unbelievable?", "url": "http://www.premierchristianradio.com/Shows/Saturday/Unbelievable"}
+    - {"title": "Flip the Table", "url": "https://tableflipsyou.blogspot.com/p/podcast.html"}
+    - {"title": "Lore", "url": "http://www.lorepodcast.com/episodes/"}
+    - {"title": "The Sci-Fi Christian", "url": "http://thescifichristian.com"}
 notes:
   - In addition to the reasons mentioned, Melissa also likes Lore because you learn the local history and legends of different places and cultures.
   - Melissa also likes Unbelievable? because it makes you see opposing points of view and challenges you to defend your beliefs.
 ---
 
-{% linkList "Melissa", list_melissa %}
-{% linkList "Brian", list_brian %}
+{% linkList melissa %}
+{% linkList brian %}
