--- a/_data/000-template.njk
+++ b/_data/000-template.njk
@@ -126,14 +126,14 @@ notes:
 youtubeNotes:
   - {"id": "youtube-video-id", "caption": "caption"}
 ---
-{% list listMelissa %}
-{% list listBrian %}
+{% list melissa %}
+{% list brian %}
 
-{% linkList linkListMelissa %}
-{% linkList linkListBrian %}
+{% linkList melissa %}
+{% linkList brian %}
 
-{% movieList movieMelissa %}
-{% movieList movieBrian %}
+{% movieList melissa %}
+{% movieList brian %}
 
-{% youtubeList youtubeBrian %}
-{% youtubeList youtubeMelissa %}
+{% youtubeList melissa %}
+{% youtubeList brian %}
