--- a/episodes/009-accomplishments.njk
+++ b/episodes/009-accomplishments.njk
@@ -9,7 +9,7 @@ hosts:
   - Melissa
 bytes: 22119904
 duration: '0:46:05'
-tags: ['episodes', 'goals']
+tags: ['episodes', 'goals', 'personal']
 
 brian:
   host: Brian
