Add board game list shortcode

--- a/_data/000-template.njk
+++ b/_data/000-template.njk
@@ -65,6 +65,33 @@ linkListMelissa:
     - {"title": "title", "url": "url"}
     - {"title": "title", "url": "url"}
 
+boardGameBrian:
+  host: Brian
+  list:
+    - {"title": "title", "id": "bgg-id"}
+    - {"title": "title", "id": "bgg-id"}
+    - {"title": "title", "id": "bgg-id"}
+    - {"title": "title", "id": "bgg-id"}
+    - {"title": "title", "id": "bgg-id"}
+    - {"title": "title", "id": "bgg-id"}
+    - {"title": "title", "id": "bgg-id"}
+    - {"title": "title", "id": "bgg-id"}
+    - {"title": "title", "id": "bgg-id"}
+    - {"title": "title", "id": "bgg-id"}
+boardGameMelissa:
+  host: Melissa
+  list:
+    - {"title": "title", "id": "bgg-id"}
+    - {"title": "title", "id": "bgg-id"}
+    - {"title": "title", "id": "bgg-id"}
+    - {"title": "title", "id": "bgg-id"}
+    - {"title": "title", "id": "bgg-id"}
+    - {"title": "title", "id": "bgg-id"}
+    - {"title": "title", "id": "bgg-id"}
+    - {"title": "title", "id": "bgg-id"}
+    - {"title": "title", "id": "bgg-id"}
+    - {"title": "title", "id": "bgg-id"}
+
 movieBrian:
   host: Brian
   list:
@@ -131,6 +158,9 @@ youtubeNotes:
 
 {% linkList melissa %}
 {% linkList brian %}
+
+{% boardGameList melissa %}
+{% boardGameList brian %}
 
 {% movieList melissa %}
 {% movieList brian %}
