--- a/subscribe.njk
+++ b/subscribe.njk
@@ -20,25 +20,25 @@ layout: base
                 <p>Download <a href="https://play.google.com/store/apps/details?id=com.google.android.apps.podcasts&hl=en_US">Google Podcasts</a> or the podcast app of your choice.</p>
             <li>
                 <p>Tap the <kbd><samp>🔍</samp></kbd> button.</p>
-                <img src="{{metadata.cdn_url}}/img/subscribe-android-podcast-addict-01.png">
+                {% cdnImage "subscribe-android-podcast-addict-01.png", metadata.cdn_url %}
             <li>
                 <p>Tap <kbd><samp>Settings</samp></kbd> in the dialog at the top of the screen.</p>
-                <img src="{{metadata.cdn_url}}/img/subscribe-android-podcast-addict-02.png">
+                {% cdnImage "subscribe-android-podcast-addict-02.png", metadata.cdn_url %}
             <li>
                 <p>Tap <kbd><samp>TURN ON</samp></kbd> to allow your phone to save podcast subscriptions.</p>
-                <img src="{{metadata.cdn_url}}/img/subscribe-android-podcast-addict-03.png">
+                {% cdnImage "subscribe-android-podcast-addict-03.png", metadata.cdn_url %}
             <li>
                 <p>Search for <samp><kbd>tto.koser.us</kbd></samp>.</p>
-                <img src="{{metadata.cdn_url}}/img/subscribe-android-podcast-addict-04.png">
+                {% cdnImage "subscribe-android-podcast-addict-04.png", metadata.cdn_url %}
             <li>
                 <p>Tap on our logo.</p>
-                <img src="{{metadata.cdn_url}}/img/subscribe-android-podcast-addict-05.png">
+                {% cdnImage "subscribe-android-podcast-addict-05.png", metadata.cdn_url %}
             <li>
                 <p>Tap <kbd><samp>➕ Subscribe</samp></kbd>.</p>
-                <img src="{{metadata.cdn_url}}/img/subscribe-android-podcast-addict-06.png">
+                {% cdnImage "subscribe-android-podcast-addict-06.png", metadata.cdn_url %}
             <li>
                 <p>You will get a notification when an episode has downloaded. Tap the notification to see the new episode, or open the app and tap on the Ten to One tile.</p>
-                <img src="{{metadata.cdn_url}}/img/subscribe-android-podcast-addict-08.png">
+                {% cdnImage "subscribe-android-podcast-addict-07.png", metadata.cdn_url %}
             <li>
                 <p>Enjoy the podcast!</p>
         </ol>
@@ -53,22 +53,22 @@ layout: base
         <ol>
             <li>
                 <p>Open the <kbd><samp>Podcasts</samp></kbd> app on your iPhone or iPad.</p>
-                <img src="{{metadata.cdn_url}}/img/subscribe-apple-1.png">
+                {% cdnImage "subscribe-apple-1.png", metadata.cdn_url %}
             <li>
                 <p>Tap the <kbd><samp>Search</samp> button in the bottom menu.</p>
-                <img src="{{metadata.cdn_url}}/img/subscribe-apple-2.png">
+                {% cdnImage "subscribe-apple-2.png", metadata.cdn_url %}
             <li>
                 <p>Search for <samp><kbd>Ten to One</kbd></samp>.</p>
-                <img src="{{metadata.cdn_url}}/img/subscribe-apple-3.png">
+                {% cdnImage "subscribe-apple-3.png", metadata.cdn_url %}
             <li>
                 <p>Find and tap on the Ten to One podcast (you may need to scroll down).</p>
-                <img src="{{metadata.cdn_url}}/img/subscribe-apple-4.png">
+                {% cdnImage "subscribe-apple-4.png", metadata.cdn_url %}
             <li>
                 <p>Tap the <kbd><samp>Subscribe</samp></kbd> button.</p>
-                <img src="{{metadata.cdn_url}}/img/subscribe-apple-5.png">
+                {% cdnImage "subscribe-apple-5.png", metadata.cdn_url %}
             <li>
                 <p>Tap the <kbd><samp>My Podcasts</samp></kbd> button. Then tap on any episode to download and listen.</p>
-                <img src="{{metadata.cdn_url}}/img/subscribe-apple-6.png">
+                {% cdnImage "subscribe-apple-6.png", metadata.cdn_url %}
             <li>
                 <p>New episodes will download automatically.</p>
             <li>
@@ -87,16 +87,16 @@ layout: base
                 <p>Download and install <a href="https://www.apple.com/itunes/">iTunes</a>.
             <li>
                 <p>Open iTunes and click <kbd><samp>File</samp></kbd>, then <kbd><samp>Subscribe to Podcast</samp></kbd>.</p>
-                <img src="{{metadata.cdn_url}}/img/subscribe-windows-itunes-1.png">
+                {% cdnImage "subscribe-windows-itunes-1", metadata.cdn_url %}
             <li>
                 <p>Enter the feed URL: <samp><kbd>http://tto.koser.us/feed.rss</kbd></samp> and click <kbd><samp>OK</samp></kbd>.</p>
-                <img src="{{metadata.cdn_url}}/img/subscribe-windows-itunes-2.png">
+                {% cdnImage "subscribe-windows-itunes-2", metadata.cdn_url %}
             <li>
                 <p>You do not need to sync, but you should select <kbd><samp>Automatically download new episodes for your subscriptions</samp></kbd>, then click <kbd><samp>Continue</samp></kbd>.</p>
-                <img src="{{metadata.cdn_url}}/img/subscribe-windows-itunes-3.png">
+                {% cdnImage "subscribe-windows-itunes-3", metadata.cdn_url %}
             <li>
                 <p>Listen to an episode by double-clicking it.</p>
-                <img src="{{metadata.cdn_url}}/img/subscribe-windows-itunes-4.png">    
+                {% cdnImage "subscribe-windows-itunes-4", metadata.cdn_url %}   
             <li>
                 <p>Open iTunes to listen to the podcast. New episodes will be automatically downloaded.</p>
             <li>
