--- a/_includes/layouts/episode.njk
+++ b/_includes/layouts/episode.njk
@@ -1,6 +1,7 @@
 ---
 layout: base
 ---
+{% include "test.njk" %}
 <article class="post h-entry">
     <header>
         <h1 class="post-title p-name">№ {{ number }} {{ title }}</h1>
