Comment out boardGameList shortcode

--- a/episodes/016-board-game-names.njk
+++ b/episodes/016-board-game-names.njk
@@ -41,5 +41,5 @@ melissa:
 notes:
   - <a href="https://en.m.wikipedia.org/wiki/Merchant_of_Venus">Wikipedia</a> says the pun was intentional. I don’t know how you can get more authoritative. 😀
 ---
-{% boardGameList melissa %}
-{% boardGameList brian %}
+{# {% boardGameList melissa %}
+{% boardGameList brian %} #}
