Fix list variables

--- a/episodes/019-memories.njk
+++ b/episodes/019-memories.njk
@@ -24,7 +24,7 @@ brian:
     - Honeymoon in Gatlinburg, TN
     - Johnsons’ wedding
     - Pitchcar game at Dice Tower Convention
-listMelissa:
+melissa:
   host: Melissa
   list:
     - Dad getting me roses for Valentine’s
