--- a/episodes/021-bucket-list-experiences.njk
+++ b/episodes/021-bucket-list-experiences.njk
@@ -11,7 +11,7 @@ bytes: 26327820
 duration: '0:43:53'
 tags: ['episodes', 'personal']
 
-listBrian:
+brian:
   host: Brian
   list:
     - Rappel into a cave
@@ -24,7 +24,7 @@ listBrian:
     - Relax in a natural hot spring
     - Get a book signed by one of my favorite authors
     - Sail on a sailing ship
-listMelissa:
+melissa:
   host: Melissa
   list:
     - Go to space
