--- a/episodes/026-new-years-resolutions-2017.njk
+++ b/episodes/026-new-years-resolutions-2017.njk
@@ -9,7 +9,7 @@ hosts:
   - Melissa
 bytes: 29325374
 duration: '0:48:52'
-tags: ['episodes', 'personal', 'resolutions']
+tags: ['episodes', 'personal', 'resolutions', 'annual']
 
 brian:
   host: Brian
