--- a/episodes/027-movies-2016.njk
+++ b/episodes/027-movies-2016.njk
@@ -9,7 +9,7 @@ hosts:
   - Melissa
 bytes: 37987041
 duration: '1:03:18'
-tags: ['episodes', 'movies']
+tags: ['episodes', 'movies', 'annual']
 
 brian:
   host: Brian
