Add character field to movie list shortcode

--- a/_data/000-template.njk
+++ b/_data/000-template.njk
@@ -95,29 +95,29 @@ boardGameMelissa:
 movieBrian:
   host: Brian
   list:
-    - {"title": "title", "slug": "letterboxd-slug"}
-    - {"title": "title", "slug": "letterboxd-slug"}
-    - {"title": "title", "slug": "letterboxd-slug"}
-    - {"title": "title", "slug": "letterboxd-slug"}
-    - {"title": "title", "slug": "letterboxd-slug"}
-    - {"title": "title", "slug": "letterboxd-slug"}
-    - {"title": "title", "slug": "letterboxd-slug"}
-    - {"title": "title", "slug": "letterboxd-slug"}
-    - {"title": "title", "slug": "letterboxd-slug"}
-    - {"title": "title", "slug": "letterboxd-slug"}
+    - {"character": "character", "title": "title", "slug": "letterboxd-slug"}
+    - {"character": "character", "title": "title", "slug": "letterboxd-slug"}
+    - {"character": "character", "title": "title", "slug": "letterboxd-slug"}
+    - {"character": "character", "title": "title", "slug": "letterboxd-slug"}
+    - {"character": "character", "title": "title", "slug": "letterboxd-slug"}
+    - {"character": "character", "title": "title", "slug": "letterboxd-slug"}
+    - {"character": "character", "title": "title", "slug": "letterboxd-slug"}
+    - {"character": "character", "title": "title", "slug": "letterboxd-slug"}
+    - {"character": "character", "title": "title", "slug": "letterboxd-slug"}
+    - {"character": "character", "title": "title", "slug": "letterboxd-slug"}
 movieMelissa:
   host: Melissa
   list:
-    - {"title": "title", "slug": "letterboxd-slug"}
-    - {"title": "title", "slug": "letterboxd-slug"}
-    - {"title": "title", "slug": "letterboxd-slug"}
-    - {"title": "title", "slug": "letterboxd-slug"}
-    - {"title": "title", "slug": "letterboxd-slug"}
-    - {"title": "title", "slug": "letterboxd-slug"}
-    - {"title": "title", "slug": "letterboxd-slug"}
-    - {"title": "title", "slug": "letterboxd-slug"}
-    - {"title": "title", "slug": "letterboxd-slug"}
-    - {"title": "title", "slug": "letterboxd-slug"}
+    - {"character": "character", "title": "title", "slug": "letterboxd-slug"}
+    - {"character": "character", "title": "title", "slug": "letterboxd-slug"}
+    - {"character": "character", "title": "title", "slug": "letterboxd-slug"}
+    - {"character": "character", "title": "title", "slug": "letterboxd-slug"}
+    - {"character": "character", "title": "title", "slug": "letterboxd-slug"}
+    - {"character": "character", "title": "title", "slug": "letterboxd-slug"}
+    - {"character": "character", "title": "title", "slug": "letterboxd-slug"}
+    - {"character": "character", "title": "title", "slug": "letterboxd-slug"}
+    - {"character": "character", "title": "title", "slug": "letterboxd-slug"}
+    - {"character": "character", "title": "title", "slug": "letterboxd-slug"}
 
 youtubeBrian:
   host: Brian
