--- a/_data/000-template.njk
+++ b/_data/000-template.njk
@@ -9,7 +9,8 @@ hosts:
   - Melissa
 bytes: 
 duration: '0:00:00'
-tags: ['episodes']
+tags:
+  - episodes
 
 listBrian:
   host: Brian
@@ -68,85 +69,112 @@ linkListMelissa:
 boardGameBrian:
   host: Brian
   list:
-    - {"title": "title", "id": "bgg-id"}
-    - {"title": "title", "id": "bgg-id"}
-    - {"title": "title", "id": "bgg-id"}
-    - {"title": "title", "id": "bgg-id"}
-    - {"title": "title", "id": "bgg-id"}
-    - {"title": "title", "id": "bgg-id"}
-    - {"title": "title", "id": "bgg-id"}
-    - {"title": "title", "id": "bgg-id"}
-    - {"title": "title", "id": "bgg-id"}
-    - {"title": "title", "id": "bgg-id"}
+    - {"title": "title", "id": "bggGameId"}
+    - {"title": "title", "id": "bggGameId"}
+    - {"title": "title", "id": "bggGameId"}
+    - {"title": "title", "id": "bggGameId"}
+    - {"title": "title", "id": "bggGameId"}
+    - {"title": "title", "id": "bggGameId"}
+    - {"title": "title", "id": "bggGameId"}
+    - {"title": "title", "id": "bggGameId"}
+    - {"title": "title", "id": "bggGameId"}
+    - {"title": "title", "id": "bggGameId"}
 boardGameMelissa:
   host: Melissa
   list:
-    - {"title": "title", "id": "bgg-id"}
-    - {"title": "title", "id": "bgg-id"}
-    - {"title": "title", "id": "bgg-id"}
-    - {"title": "title", "id": "bgg-id"}
-    - {"title": "title", "id": "bgg-id"}
-    - {"title": "title", "id": "bgg-id"}
-    - {"title": "title", "id": "bgg-id"}
-    - {"title": "title", "id": "bgg-id"}
-    - {"title": "title", "id": "bgg-id"}
-    - {"title": "title", "id": "bgg-id"}
+    - {"title": "title", "id": "bggGameId"}
+    - {"title": "title", "id": "bggGameId"}
+    - {"title": "title", "id": "bggGameId"}
+    - {"title": "title", "id": "bggGameId"}
+    - {"title": "title", "id": "bggGameId"}
+    - {"title": "title", "id": "bggGameId"}
+    - {"title": "title", "id": "bggGameId"}
+    - {"title": "title", "id": "bggGameId"}
+    - {"title": "title", "id": "bggGameId"}
+    - {"title": "title", "id": "bggGameId"}
+
+bookBrian:
+  host: Brian
+  list:
+    - {"title": "title", "review": "goodreadsId"}
+    - {"title": "title", "review": "goodreadsId"}
+    - {"title": "title", "review": "goodreadsId"}
+    - {"title": "title", "review": "goodreadsId"}
+    - {"title": "title", "review": "goodreadsId"}
+    - {"title": "title", "review": "goodreadsId"}
+    - {"title": "title", "review": "goodreadsId"}
+    - {"title": "title", "review": "goodreadsId"}
+    - {"title": "title", "review": "goodreadsId"}
+    - {"title": "title", "review": "goodreadsId"}
+bookMelissa:
+  host: Melissa
+  list:
+    - {"title": "title", "review": "goodreadsId"}
+    - {"title": "title", "review": "goodreadsId"}
+    - {"title": "title", "review": "goodreadsId"}
+    - {"title": "title", "review": "goodreadsId"}
+    - {"title": "title", "review": "goodreadsId"}
+    - {"title": "title", "review": "goodreadsId"}
+    - {"title": "title", "review": "goodreadsId"}
+    - {"title": "title", "review": "goodreadsId"}
+    - {"title": "title", "review": "goodreadsId"}
+    - {"title": "title", "review": "goodreadsId"}
 
 movieBrian:
   host: Brian
   list:
-    - {"character": "character", "title": "title", "slug": "letterboxd-slug"}
-    - {"character": "character", "title": "title", "slug": "letterboxd-slug"}
-    - {"character": "character", "title": "title", "slug": "letterboxd-slug"}
-    - {"character": "character", "title": "title", "slug": "letterboxd-slug"}
-    - {"character": "character", "title": "title", "slug": "letterboxd-slug"}
-    - {"character": "character", "title": "title", "slug": "letterboxd-slug"}
-    - {"character": "character", "title": "title", "slug": "letterboxd-slug"}
-    - {"character": "character", "title": "title", "slug": "letterboxd-slug"}
-    - {"character": "character", "title": "title", "slug": "letterboxd-slug"}
-    - {"character": "character", "title": "title", "slug": "letterboxd-slug"}
+    - {"character": "character", "title": "title", "slug": "letterboxdSlug"}
+    - {"character": "character", "title": "title", "slug": "letterboxdSlug"}
+    - {"character": "character", "title": "title", "slug": "letterboxdSlug"}
+    - {"character": "character", "title": "title", "slug": "letterboxdSlug"}
+    - {"character": "character", "title": "title", "slug": "letterboxdSlug"}
+    - {"character": "character", "title": "title", "slug": "letterboxdSlug"}
+    - {"character": "character", "title": "title", "slug": "letterboxdSlug"}
+    - {"character": "character", "title": "title", "slug": "letterboxdSlug"}
+    - {"character": "character", "title": "title", "slug": "letterboxdSlug"}
+    - {"character": "character", "title": "title", "slug": "letterboxdSlug"}
 movieMelissa:
   host: Melissa
   list:
-    - {"character": "character", "title": "title", "slug": "letterboxd-slug"}
-    - {"character": "character", "title": "title", "slug": "letterboxd-slug"}
-    - {"character": "character", "title": "title", "slug": "letterboxd-slug"}
-    - {"character": "character", "title": "title", "slug": "letterboxd-slug"}
-    - {"character": "character", "title": "title", "slug": "letterboxd-slug"}
-    - {"character": "character", "title": "title", "slug": "letterboxd-slug"}
-    - {"character": "character", "title": "title", "slug": "letterboxd-slug"}
-    - {"character": "character", "title": "title", "slug": "letterboxd-slug"}
-    - {"character": "character", "title": "title", "slug": "letterboxd-slug"}
-    - {"character": "character", "title": "title", "slug": "letterboxd-slug"}
+    - {"character": "character", "title": "title", "slug": "letterboxdSlug"}
+    - {"character": "character", "title": "title", "slug": "letterboxdSlug"}
+    - {"character": "character", "title": "title", "slug": "letterboxdSlug"}
+    - {"character": "character", "title": "title", "slug": "letterboxdSlug"}
+    - {"character": "character", "title": "title", "slug": "letterboxdSlug"}
+    - {"character": "character", "title": "title", "slug": "letterboxdSlug"}
+    - {"character": "character", "title": "title", "slug": "letterboxdSlug"}
+    - {"character": "character", "title": "title", "slug": "letterboxdSlug"}
+    - {"character": "character", "title": "title", "slug": "letterboxdSlug"}
+    - {"character": "character", "title": "title", "slug": "letterboxdSlug"}
 
 youtubeBrian:
   host: Brian
   list:
-    - {"title": "title", "id": "youtube-video-id"}
-    - {"title": "title", "id": "youtube-video-id"}
-    - {"title": "title", "id": "youtube-video-id"}
-    - {"title": "title", "id": "youtube-video-id"}
-    - {"title": "title", "id": "youtube-video-id"}
-    - {"title": "title", "id": "youtube-video-id"}
-    - {"title": "title", "id": "youtube-video-id"}
-    - {"title": "title", "id": "youtube-video-id"}
-    - {"title": "title", "id": "youtube-video-id"}
-    - {"title": "title", "id": "youtube-video-id"}
-  playlistID: youtube-playlist-id
+    - {"title": "title", "id": "youtubeVideoId"}
+    - {"title": "title", "id": "youtubeVideoId"}
+    - {"title": "title", "id": "youtubeVideoId"}
+    - {"title": "title", "id": "youtubeVideoId"}
+    - {"title": "title", "id": "youtubeVideoId"}
+    - {"title": "title", "id": "youtubeVideoId"}
+    - {"title": "title", "id": "youtubeVideoId"}
+    - {"title": "title", "id": "youtubeVideoId"}
+    - {"title": "title", "id": "youtubeVideoId"}
+    - {"title": "title", "id": "youtubeVideoId"}
+  playlistID: youtubePlaylistId
 youtubeMelissa:
   host: Melissa
   list:
-    - {"title": "title", "id": "youtube-video-id"}
-    - {"title": "title", "id": "youtube-video-id"}
-    - {"title": "title", "id": "youtube-video-id"}
-    - {"title": "title", "id": "youtube-video-id"}
-    - {"title": "title", "id": "youtube-video-id"}
-    - {"title": "title", "id": "youtube-video-id"}
-    - {"title": "title", "id": "youtube-video-id"}
-    - {"title": "title", "id": "youtube-video-id"}
-    - {"title": "title", "id": "youtube-video-id"}
-    - {"title": "title", "id": "youtube-video-id"}
-  playlistID: youtube-playlist-id
+    - {"title": "title", "id": "youtubeVideoId"}
+    - {"title": "title", "id": "youtubeVideoId"}
+    - {"title": "title", "id": "youtubeVideoId"}
+    - {"title": "title", "id": "youtubeVideoId"}
+    - {"title": "title", "id": "youtubeVideoId"}
+    - {"title": "title", "id": "youtubeVideoId"}
+    - {"title": "title", "id": "youtubeVideoId"}
+    - {"title": "title", "id": "youtubeVideoId"}
+    - {"title": "title", "id": "youtubeVideoId"}
+    - {"title": "title", "id": "youtubeVideoId"}
+  playlistID: youtubePlaylistId
 
 notes:
   - note
@@ -161,6 +189,9 @@ youtubeNotes:
 
 {% boardGameList melissa %}
 {% boardGameList brian %}
+
+{% bookList melissa %}
+{% bookList brian %}
 
 {% movieList melissa %}
 {% movieList brian %}
