Update book list template

--- a/_data/000-template.njk
+++ b/_data/000-template.njk
@@ -96,29 +96,29 @@ boardGameMelissa:
 bookBrian:
   host: Brian
   list:
-    - {"title": "title", "review": "goodreadsId"}
-    - {"title": "title", "review": "goodreadsId"}
-    - {"title": "title", "review": "goodreadsId"}
-    - {"title": "title", "review": "goodreadsId"}
-    - {"title": "title", "review": "goodreadsId"}
-    - {"title": "title", "review": "goodreadsId"}
-    - {"title": "title", "review": "goodreadsId"}
-    - {"title": "title", "review": "goodreadsId"}
-    - {"title": "title", "review": "goodreadsId"}
-    - {"title": "title", "review": "goodreadsId"}
+    - {"title": "title", "review": "goodreadsReviewId", "book": "goodreadsBookId"}
+    - {"title": "title", "review": "goodreadsReviewId", "book": "goodreadsBookId"}
+    - {"title": "title", "review": "goodreadsReviewId", "book": "goodreadsBookId"}
+    - {"title": "title", "review": "goodreadsReviewId", "book": "goodreadsBookId"}
+    - {"title": "title", "review": "goodreadsReviewId", "book": "goodreadsBookId"}
+    - {"title": "title", "review": "goodreadsReviewId", "book": "goodreadsBookId"}
+    - {"title": "title", "review": "goodreadsReviewId", "book": "goodreadsBookId"}
+    - {"title": "title", "review": "goodreadsReviewId", "book": "goodreadsBookId"}
+    - {"title": "title", "review": "goodreadsReviewId", "book": "goodreadsBookId"}
+    - {"title": "title", "review": "goodreadsReviewId", "book": "goodreadsBookId"}
 bookMelissa:
   host: Melissa
   list:
-    - {"title": "title", "review": "goodreadsId"}
-    - {"title": "title", "review": "goodreadsId"}
-    - {"title": "title", "review": "goodreadsId"}
-    - {"title": "title", "review": "goodreadsId"}
-    - {"title": "title", "review": "goodreadsId"}
-    - {"title": "title", "review": "goodreadsId"}
-    - {"title": "title", "review": "goodreadsId"}
-    - {"title": "title", "review": "goodreadsId"}
-    - {"title": "title", "review": "goodreadsId"}
-    - {"title": "title", "review": "goodreadsId"}
+    - {"title": "title", "review": "goodreadsReviewId", "book": "goodreadsBookId"}
+    - {"title": "title", "review": "goodreadsReviewId", "book": "goodreadsBookId"}
+    - {"title": "title", "review": "goodreadsReviewId", "book": "goodreadsBookId"}
+    - {"title": "title", "review": "goodreadsReviewId", "book": "goodreadsBookId"}
+    - {"title": "title", "review": "goodreadsReviewId", "book": "goodreadsBookId"}
+    - {"title": "title", "review": "goodreadsReviewId", "book": "goodreadsBookId"}
+    - {"title": "title", "review": "goodreadsReviewId", "book": "goodreadsBookId"}
+    - {"title": "title", "review": "goodreadsReviewId", "book": "goodreadsBookId"}
+    - {"title": "title", "review": "goodreadsReviewId", "book": "goodreadsBookId"}
+    - {"title": "title", "review": "goodreadsReviewId", "book": "goodreadsBookId"}
 
 movieBrian:
   host: Brian
@@ -179,7 +179,7 @@ youtubeMelissa:
 notes:
   - note
 youtubeNotes:
-  - {"id": "youtube-video-id", "caption": "caption"}
+  - {"id": "youtubeVideoId", "caption": "caption"}
 ---
 {% list melissa %}
 {% list brian %}
