--- a/episodes/038-grunts.njk
+++ b/episodes/038-grunts.njk
@@ -14,15 +14,15 @@ tags: ['episodes', 'april-fools']
 brian:
   host: Brian
   list:
-    - *grunting noise*
-    - *grunting noise*
-    - *grunting noise*
-    - *grunting noise*
-    - *grunting noise*
-    - *grunting noise*
-    - *grunting noise*
-    - *grunting noise*
-    - *grunting noise*
-    - *grunting noise*
+    - "*grunting noise*"
+    - "*grunting noise*"
+    - "*grunting noise*"
+    - "*grunting noise*"
+    - "*grunting noise*"
+    - "*grunting noise*"
+    - "*grunting noise*"
+    - "*grunting noise*"
+    - "*grunting noise*"
+    - "*grunting noise*"
 ---
 {% list brian %}
