--- a/episodes/031-bible-characters.njk
+++ b/episodes/031-bible-characters.njk
@@ -39,7 +39,7 @@ melissa:
     - David
 
 notes:
-  - <a href="https://www.biblegateway.com/passage/?search=numbers+14%3A9&version=KJV">Numbers 14:9</a> Only rebel not ye against the Lord, neither fear ye the people of the land; for they are bread for us: their defence is departed from them, and the Lord is with us: fear them not.</li>
+  - "<a href='https://www.biblegateway.com/passage/?search=numbers+14%3A9&version=KJV'>Numbers 14:9</a> Only rebel not ye against the Lord, neither fear ye the people of the land; for they are bread for us: their defence is departed from them, and the Lord is with us: fear them not.</li>"
 ---
 {% list brian %}
 {% list melissa %}
