--- a/_data/000-template.njk
+++ b/_data/000-template.njk
@@ -42,29 +42,29 @@ listMelissa:
 linkListBrian:
   host: Brian
   list:
-    - {"title": "title", "url": "url"}
-    - {"title": "title", "url": "url"}
-    - {"title": "title", "url": "url"}
-    - {"title": "title", "url": "url"}
-    - {"title": "title", "url": "url"}
-    - {"title": "title", "url": "url"}
-    - {"title": "title", "url": "url"}
-    - {"title": "title", "url": "url"}
-    - {"title": "title", "url": "url"}
-    - {"title": "title", "url": "url"}
+    - {"title": "title", "url": "url", "comment": "comment"}
+    - {"title": "title", "url": "url", "comment": "comment"}
+    - {"title": "title", "url": "url", "comment": "comment"}
+    - {"title": "title", "url": "url", "comment": "comment"}
+    - {"title": "title", "url": "url", "comment": "comment"}
+    - {"title": "title", "url": "url", "comment": "comment"}
+    - {"title": "title", "url": "url", "comment": "comment"}
+    - {"title": "title", "url": "url", "comment": "comment"}
+    - {"title": "title", "url": "url", "comment": "comment"}
+    - {"title": "title", "url": "url", "comment": "comment"}
 linkListMelissa:
   host: Melissa
   list:
-    - {"title": "title", "url": "url"}
-    - {"title": "title", "url": "url"}
-    - {"title": "title", "url": "url"}
-    - {"title": "title", "url": "url"}
-    - {"title": "title", "url": "url"}
-    - {"title": "title", "url": "url"}
-    - {"title": "title", "url": "url"}
-    - {"title": "title", "url": "url"}
-    - {"title": "title", "url": "url"}
-    - {"title": "title", "url": "url"}
+    - {"title": "title", "url": "url", "comment": "comment"}
+    - {"title": "title", "url": "url", "comment": "comment"}
+    - {"title": "title", "url": "url", "comment": "comment"}
+    - {"title": "title", "url": "url", "comment": "comment"}
+    - {"title": "title", "url": "url", "comment": "comment"}
+    - {"title": "title", "url": "url", "comment": "comment"}
+    - {"title": "title", "url": "url", "comment": "comment"}
+    - {"title": "title", "url": "url", "comment": "comment"}
+    - {"title": "title", "url": "url", "comment": "comment"}
+    - {"title": "title", "url": "url", "comment": "comment"}
 
 boardGameBrian:
   host: Brian
